<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="26dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mainTabTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/app_info"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="65dp" />

    <TextView
        android:id="@+id/authors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/authors"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/author1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/author1"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/author2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/author2"
        android:textStyle="italic" />
</LinearLayout>
