<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bikeTracker.TrackDetailFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/track_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_length"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/trackLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/track_top_time"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/topTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_description"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/trackDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
